--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -25,12 +25,20 @@
     <string name="logout">வெளியேறு</string>
     <string name="welcome_user">வரவேற்கிறோம் %1$s!</string>
     <string name="please_wait">காத்திருக்கவும்.</string>
-    <string name="subscribe_to_watch">பார்க்க சந்தா செலுத்தவும்</string>
-    <string name="subscribe_to_listen">கேட்க சந்தா செலுத்தவும்</string>
-    <string name="subscribe_greetings">Please activate a package to unlock access to exclusive content from Kiki.</string>
-    <string name="subscribe_now">SUBSCRIBE NOW</string>
-    <string name="go_back">GO BACK</string>
-    <string name="cancel">ரத்து</string>
+    <string name="subscribe_to_watch">பார்க்க பதிவு செய்யவும்</string>
+    <string name="subscribe_to_listen">கேட்க பதிவு செய்யவும்</string>
+    <string name="subscribe_greetings">KIKI இடமிருந்து பிரத்தியேக உள்ளடக்கமொன்றை அணுகுவதற்காக தொகுப்பொன்றை செயற்படுத்தவும்</string>
+    <string name="subscribe_now">பதிவு செய்க</string>
+    <string name="go_back">முந்தைய பக்கம்</string>
+    <string name="cancel">ரத்துசெய்</string>
+    <string name="child_mode_act">குழந்தை முறை செயல்படுத்தப்படுகிறது</string>
+    <string name="child_mode_deact">குழந்தை முறை செயலிழக்கப்படுகிறது</string>
+    <string name="child_mode_act_pass">குழந்தை பயன்முறையை செயல்படுத்த கடவுச்சொல்லை உள்ளிடவும்</string>
+    <string name="child_mode_deact_pass">குழந்தை பயன்முறையை செயலிழக்க கடவுச்சொல்லை உள்ளிடவும்</string>
+    <string name="no_subscribed_programs">சந்தா நிரல்கள் எதுவும் கிடைக்கவில்லை , தயவு செய்து மொபைல் டிவியில் இருந்து உங்களுக்கு பிடித்த நிரல்களுக்கு குழுசேரவும்.</string>
+    <string name="create_an_account_login">ஒரு கணக்கை உருவாக்க / உள்நுழைய / வகை</string>
+
+
     //Error messages
     <string name="username_and_password_cannot_be_empty">Username மற்றும் Password காலியாக இருக்க முடியாது</string>
     <string name="email_cannot_be_empty">Email காலியாக இருக்க முடியாது</string>
@@ -44,6 +52,8 @@
     <string name="user_already_registerd">User ஏற்கனவே பதிவு செய்துள்ளார்</string>
     <string name="invalid_mobile_number">தவறான மொபைல் எண். செல்லுபடியாகும் மொபைல் எண்ணை உள்ளிடுக.</string>
     <string name="network_problem_message">இணையத்துடன் இணைக்க முடியவில்லை, உங்கள் இணைய இணைப்பை சரிபார்க்கவும்.</string>
+    <string name="forgot_password">கடவுச்சொல்லை மறந்து</string>
+
     //Music
     <string name="popular_songs">பிரபலமான பாடல்கள்</string>
     <string name="latest_songs">புதுப் பாடல்கள் </string>
@@ -53,7 +63,7 @@
     <string name="view_all">எல்லாம் பார்க்க</string>
     <string name="home">முகப்பு</string>
     <string name="browse">தேடுக</string>
-    <string name="library">தொகுப்பு</string>
+    <string name="library">எனது தொகுப்பு</string>
     <string name="add">சேர்க்க</string>
     <string name="genre_wise">பாடல்வகைகளின் வரிசைப்படி</string>
     <string name="artist_wise">கலைஞர்களின் வரிசைப்படி</string>
@@ -69,5 +79,13 @@
     <string name="add_to_playlist_2">பாடல் வரிசையில் சேர்க்கவும்</string>
     <string name="kiki_playlist">KiKi பாடல்வரிசை</string>
     <string name="genre">பாடல்வகை</string>
+    <string name="added_to_playlist">பாடல் வரிசையில் சேர்க்கப்பட்டது</string>
+    <string name="added_to_library">எனது தொகுப்பு சேர்க்கப்பட்டது</string>
+    <string name="play_2">இயக்கு</string>
+    <string name="listen_to_fav">உங்களுக்கு பிடித்தவைகளைக் கேளுங்கள்</string>
+    <string name="yes">ஆம்</string>
+    <string name="remove_this_from_library">இதை நூலகத்திலிருந்து அகற்ற விரும்புகிறீர்களா?</string>
+    <string name="music_confirm">உறுதிப்படுத்தவும்</string>
+    <string name="music_edit">தொகு</string>
 
 </resources>
