--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -84,8 +84,10 @@
     <string name="play_2">இயக்கு</string>
     <string name="listen_to_fav">உங்களுக்கு பிடித்தவைகளைக் கேளுங்கள்</string>
     <string name="yes">ஆம்</string>
+    <string name="no">இல்லை</string>
     <string name="remove_this_from_library">இதை நூலகத்திலிருந்து அகற்ற விரும்புகிறீர்களா?</string>
     <string name="music_confirm">உறுதிப்படுத்தவும்</string>
     <string name="music_edit">தொகு</string>
+    <string name="no_search_found">No search results found.</string>
 
 </resources>
