--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -2,24 +2,24 @@
     <string name="choose_language">மொழியைத் தேர்வு செய்க</string>
     <string name="next">அடுத்து</string>
     <string name="facebook_login">மூலம் login செய்யவும்</string>
-    <string name="dont_have_gmail">Facebook அல்லது Gmail இல்லையெனில்?</string>
-    <string name="login_with_email">Username மூலம் உள்நுழைக</string>
-    <string name="create_account">புதிய ஒரு account உருவாக்க</string>
+    <string name="dont_have_gmail">பேஸ்புக் அல்லது ஜி-மெயில் கணக்கு இல்லையா?</string>
+    <string name="login_with_email">பயனர்பெயருடன் உள்நுழைக</string>
+    <string name="create_account">கணக்கு ஒன்றை உருவாக்கவும்</string>
     <string name="or">அல்லது</string>
-    <string name="sign_in">Login செய்க</string>
+    <string name="sign_in">உள்நுழை</string>
     <string name="sign_in_button">உள்நுழைக</string>
     <string name="type_email">உங்களுடைய email ஜ் type செய்யவும்</string>
-    <string name="type_username">உங்களுடைய username ஜ் type செய்யவும்</string>
+    <string name="type_username">பயனர் பெயரை உள்ளிடவும்</string>
     <string name="password">Password</string>
-    <string name="enter_password">உங்களுடைய password ஜ் type செய்யவும்</string>
+    <string name="enter_password">கடவுச்சொல்லை உள்ளிடவும்</string>
     <string name="sign_in_text">உள்நுழைக</string>
-    <string name="register_now">Register செய்க</string>
+    <string name="register_now">பதிவுசெய்</string>
     <string name="email">Email</string>
-    <string name="username">Username</string>
-    <string name="confirm_password">Confirm Password</string>
-    <string name="type_password_again">மீன்டும் உங்களுடைய password ஜ் type செய்யவும்</string>
+    <string name="username">பாவனையாளர் பெயர்</string>
+    <string name="confirm_password">கடவுச்சொல்லை உறுதிப்படுத்தவும்</string>
+    <string name="type_password_again">மீண்டும் உங்களுடைய கடவுச்சொல்லை உள்ளிடவும்</string>
     <string name="sign_up_text">உள்நுழைக</string>
-    <string name="enter_phone_number">உங்களுடைய தொலைபேசி என் ஜ் type செய்யவும்</string>
+    <string name="enter_phone_number">உங்களுடைய தொலைபேசி இலக்கத்தை பதியவும்</string>
     <string name="mobile_number_confirm">உள்நுழைக</string>
     <string name="logout_text">நிச்சயமாக வெளியேற விரும்புகிறீர்களா?</string>
     <string name="logout">வெளியேறு</string>
@@ -38,6 +38,25 @@
     <string name="no_subscribed_programs">சந்தா நிரல்கள் எதுவும் கிடைக்கவில்லை , தயவு செய்து மொபைல் டிவியில் இருந்து உங்களுக்கு பிடித்த நிரல்களுக்கு குழுசேரவும்.</string>
     <string name="create_an_account_login">ஒரு கணக்கை உருவாக்க / உள்நுழைய / வகை</string>
 
+
+    <string name="my_list">எனது பட்டியல்</string>
+    <string name="add_to_my_list">எனது பட்டியலில் \nசேர்க்கவும்</string>
+    <string name="like_movie">இந்த திரைப்படத்தை \nவிரும்பு</string>
+    <string name="ok">சரி</string>
+    <string name="play_now">தற்பொழுது  இயக்கவும்</string>
+    <string name="play_trailer">டிரெய்லர் இயக்கவும்</string>
+    <string name="close">மூடு</string>
+    <string name="menu_chile_mode">குழந்தை முறை</string>
+    <string name="new_playlist">புதிய பாடல் வரிசை</string>
+    <string name="menu_notifications">அறிவிப்பு</string>
+    <string name="create_new_playlist">புதிய பாடல் வரிசையை \nதயாரிக்க</string>
+    <string name="removed_from_lib">தொகுப்பிலிருந்து நீக்கப்பட்டது</string>
+    <string name="reset_confirmation_code">கடவுச்சொல்லை மீட்டமைக்க உறுதிப்படுத்தல் குறியீடு உங்கள் எண்ணுக்கு அனுப்பப்படும்</string>
+    <string name="reset_confirm_code">தயவுசெய்து உங்களுடைய இரகசிய குறியீட்டை உறுதிப்படுத்தவும்</string>
+    <string name="forgot_password_greating">உங்கள் எண்ணுக்கு உறுதிப்படுத்தல் குறியீடு அனுப்பப்பட்டுள்ளது. கடவுச்சொல்லை மீட்டமைக்க தயவுசெய்து அதை உள்ளிடவும்</string>
+    <string name="reset_password">கடவுச்சொல்லை மீள அமைக்கவும்</string>
+    <string name="resend_code">இரகசிய குறியீட்டை மீள அனுப்பவும்</string>
+    <string name="more_episodes">அதிக அத்தியாயங்கள்</string>
 
     //Error messages
     <string name="username_and_password_cannot_be_empty">Username மற்றும் Password காலியாக இருக்க முடியாது</string>
@@ -89,5 +108,8 @@
     <string name="music_confirm">உறுதிப்படுத்தவும்</string>
     <string name="music_edit">தொகு</string>
     <string name="no_search_found">No search results found.</string>
+    <string name="add_all">அனைத்தையும் சேர்க்கவும்</string>
+    <string name="clear_all">அனைத்தையும் அழிக்கவும்</string>
+    <string name="recent_search">அண்மைய தேடல்</string>
 
 </resources>
