--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,9 @@
     <string name="please_wait">Please wait</string>
     <string name="more_episodes">MORE EPISODES</string>
 
+    <string name="video_tab">VIDEO</string>
+    <string name="audio_tab">MUSIC</string>
+
     <string name="drawer_open">Open menu</string>
     <string name="drawer_close">Close menu</string>
     <string name="close">CLOSE</string>
@@ -186,7 +189,7 @@
     <string name="genre">Genres</string>
     <string name="songs">Songs</string>
     <string name="added_to_playlist">Added to Playlist</string>
-    <string name="no_playlist_found">No play list found</string>
+    <string name="no_playlist_found">No playlist found</string>
     <string name="added_to_library">Added to library</string>
     <string name="listen_to_fav">listen to your favorites</string>
     <string name="yes">Yes</string>
