--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,11 +108,7 @@
     <string name="login_reset">Login</string>
     <string name="login_new_password">Please login with your new password.</string>
 
-
     <string name="song_duration"> "" + minutes</string>
-
-
-
 
     <string name="male">Male</string>
     <string name="female">Female</string>
@@ -120,13 +116,6 @@
 
     <string name="settings">Settings</string>
     <string name="profile">Profile</string>
-
-
-
-
-
-
-
 
     <string name="type_password">Type your password</string>
     <string name="enter_username">Type your username</string>
@@ -178,6 +167,7 @@
     <string name="genre_wise">By Genre</string>
     <string name="artist_wise">By Artist</string>
     <string name="add">Add</string>
+    <string name="added">Added</string>
     <string name="song">Song</string>
     <string name="artist">Artist</string>
     <string name="playlists">Playlists</string>
