--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -116,10 +116,12 @@
     <string name="no">இல்லை</string>
     <string name="remove_this_from_library">இதை நூலகத்திலிருந்து அகற்ற விரும்புகிறீர்களா?</string>
     <string name="music_confirm">உறுதிப்படுத்தவும்</string>
-    <string name="music_edit">தொகு</string>
+    <string name="music_edit">(தொகு)</string>
+    <string name="edit_playlist">தொகு</string>
     <string name="no_search_found">No search results found.</string>
     <string name="add_all">அனைத்தையும் சேர்க்கவும்</string>
     <string name="clear_all">அனைத்தையும் அழிக்கவும்</string>
     <string name="recent_search">அண்மைய தேடல்</string>
+    <string name="add_songs">பாடல்களைச் சேர்க்கவும்</string>
 
 </resources>
