--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,11 +186,13 @@
     <string name="no">No</string>
     <string name="remove_this_from_library">Do you want to remove this from library?</string>
     <string name="music_confirm">Confirm</string>
-    <string name="music_edit">Edit</string>
+    <string name="music_edit">(edit)</string>
+    <string name="edit_playlist">Edit</string>
     <string name="no_search_found">No search results found.</string>
     <string name="add_all">Add all</string>
     <string name="clear_all">Remove all</string>
     <string name="recent_search">Recent search</string>
+    <string name="add_songs">Add Songs</string>
 
     <string name="play_2">Play</string>
     <string name="play_random">Play Random</string>
