--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -123,5 +123,8 @@
     <string name="clear_all">அனைத்தையும் அழிக்கவும்</string>
     <string name="recent_search">அண்மைய தேடல்</string>
     <string name="add_songs">பாடல்களைச் சேர்க்கவும்</string>
+    <string name="delete_notification">இதை நீக்க விரும்புகிறீர்களா?</string>
+    <string name="audio_removed">நீக்கப்பட்டது</string>
+    <string name="playlist_created">உங்கள் பாடல்வரிசை உருவாக்கப்பட்டது</string>
 
 </resources>
