--- a/app/src/main/res/values-si/strings.xml
+++ b/app/src/main/res/values-si/strings.xml
@@ -129,5 +129,6 @@
     <string name="playlist_created">ඔබෙ ගීත එකතුව සකසන ලදී</string>
     <string name="playlist_edited">ගීත එකතුව සාර්තකව සංස්කරණය කරන ලදී.</string>
     <string name="radio_drama">ගුවන්විදුලි නාට්‍ය</string>
+    <string name="payments">ගෙවීම්</string>
 
 </resources>
