--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -128,5 +128,6 @@
     <string name="playlist_created">உங்கள் பாடல்வரிசை உருவாக்கப்பட்டது</string>
     <string name="playlist_edited">உங்கள் பாடல்வரிசை திருத்தப்பட்டது.</string>
     <string name="radio_drama">வானொலி நாடகங்கள்</string>
+    <string name="payments">கொடுப்பனவுகள்</string>
 
 </resources>
