--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,6 +268,7 @@
     <string name="go_back">GO BACK</string>
     <string name="logout_text">Are you sure you want to logout?</string>
     <string name="logout">Logout</string>
+    <string name="payments">Payments</string>
 
     //Error messages
     <string name="username_and_password_cannot_be_empty">Username and Password cannot be empty</string>
